# planning_tutorial

./: .gitignore  CMakeLists.txt  LICENSE  README.md  liverpool_mb_mn.rviz  package.xml  plan_tut.rviz  plan_tut_mbot.rviz
config/: carpet_monitored_nav_config.yaml  monitored_nav_config.yaml  pad_monitored_nav_config.yaml  tut_dev.rosinstall
doc/: dev_prep.md  exercise_1.md  exercise_2.md  exercise_3.md  exercise_mbot.md  tutorial_prep.md
launch/: aloof_semantic_map.launch  just-mdp-executor.launch  mdp-executor-dependencies.launch  meta_rooms.launch  monitored_navigation.launch  navigation.launch  object_search.launch  reduced_topological_navigation.launch  topological_navigation.launch  tsc_move_base.launch  tsc_navigation.launch
maps/: plan_tut_edges.yaml  plan_tut_top_map.yaml
maps/soma_dump/maps/: soma2.bson  soma2.metadata.json
maps/soma_dump/soma2data/: soma2_roi.bson  soma2_roi.metadata.json
scripts/: announce_at_waypoints.py  coffee_delivery.py  coffee_delivery_fill.py  ltl_nav.py  start_rob.tmux  start_sim.tmux  sweep_at_waypoints.py
