<?xml version="1.0"?>
<package>
  <name>planning_tutorial</name>
  <version>0.0.3</version>
  <description>The planning_tutorial package</description>

  <maintainer email="bruno@robots.ox.ac.uk">Bruno Lacerda</maintainer>
  <maintainer email="nickh@robots.ox.ac.uk">Nick Hawes</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>mdp_plan_exec</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>strands_executive_msgs</build_depend>
  <build_depend>strands_morse</build_depend>
  <build_depend>task_executor</build_depend>
  <build_depend>topological_navigation</build_depend>
  <build_depend>topological_utils</build_depend>
  <build_depend>door_pass</build_depend>
  <build_depend>topological_rviz_tools</build_depend>


  <run_depend>mdp_plan_exec</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>strands_executive_msgs</run_depend>
  <run_depend>strands_morse</run_depend>
  <run_depend>task_executor</run_depend>
  <run_depend>topological_navigation</run_depend>
  <run_depend>topological_utils</run_depend>
  <run_depend>door_pass</run_depend>
  <run_depend>topological_rviz_tools</run_depend>

</package>